Fixed wrapper sizing with current arrangement of tiles. (Extra space on right side).

--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
 
 
 #wrapper {
-    aspect-ratio: 1.7;
-    width: 80vmin;
+    aspect-ratio: 1.5;
+    width: 60vmin;
     position: relative;
   }
 
@@ -40,21 +40,21 @@ body {
     background-color: #883955;
     z-index: 2;
     height:80%;
-    width:20%;
+    width:25%;
     border-radius: 8rem;
 }
 #wrapper > .shape:nth-child(2){
     top:0%;
-    left:21%;
+    left:25.4%;
     background-color: #E6ADEC;
     z-index: 2;
     height:60%;
-    width:20%;
+    width:20.1%;
     border-radius: 8rem;
 }
 #wrapper > .shape:nth-child(3){
     top: 0%;
-    left: 42%;
+    left: 45.8%;
     background-color: #EFB9CB;
     z-index: 1;
     height:68%;
@@ -63,7 +63,7 @@ body {
 }
 #wrapper > .shape:nth-child(4){
     top: 0%;
-    left: 53%;
+    left: 56%;
     background-color: #EECFD4;
     z-index: 2;
     height:82%;
@@ -72,10 +72,19 @@ body {
 }
 #wrapper > .shape:nth-child(5){
     top: 10%;
-    left: 76%;
+    left: 78.3%;
     background-color: #F3F9D2;
     z-index: 2;
     height:80%;
-    width:20%;
+    width:21.3%;
     border-radius: 8rem;
 }
+
+.link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
